<resources>
    <string name="app_name" translatable="false">Sauter Schnäppchen</string>

    <string name="error_no_pdf">PDF can\'t be found</string>
    <string name="error_invalid_pdf">PDF seems to be invalid. Can\'t be parsed.</string>
    <string name="error_generic">Something is wrong. Pull to retry.</string>
    <string name="search_on_google">Search on Google</string>
    <string name="search_the_dslr_forum">Search the DSLR-Forum</string>
    <string name="open_nikon_gebrauchtpreisliste">Go to \"Nikon-Gebrauchtpreisliste\"</string>
    <string name="open_sauter">Go to \"Sauter\" website</string>
    <string name="filter_list">Filter list</string>
    <string name="filter_show_all">All</string>
    <string name="filter_show_unknown">Miscellaneous</string>
    <string name="sort_by">Sort by…</string>
    <string name="sort_price">price</string>
    <string name="sort_description">description</string>
</resources>
