<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/openGebrauchtpreislisteNikon"
        android:icon="@drawable/ic_open_in_browser_24dp"
        android:title="@string/open_nikon_gebrauchtpreisliste"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortList"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_price"
                android:title="@string/sort_price" />
            <item
                android:id="@+id/sort_description"
                android:title="@string/sort_description" />
        </menu>
    </item>
    <item
        android:id="@+id/filterList"
        android:icon="@drawable/ic_filter_list_24dp"
        android:title="@string/filter_list"
        app:showAsAction="ifRoom">
        <menu />
    </item>
</menu>
